[project]
name = "medical-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flask>=3.1.2",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
]
